CSS selectors have been changed to be more concise

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- since this section of text is on the side of the screen i have inlcuded the semantic elements "aside" to allow future programmers to understand this code better -->
     <aside class="benefits">
 
-        <section class="benefit-lead">
+        <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead  Generation Image" />
             <p>
@@ -75,7 +75,7 @@
             </p>
         </section>
 
-        <section class="benefit-brand">
+        <section class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Image" />
             <p>
@@ -83,7 +83,7 @@
             </p>
         </section>
 
-        <section class="benefit-cost">
+        <section class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost Management Image"></img>
             <p>
