--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <!-- the below lines of code have been changed in order to include th semantic elements "header and nav" -->
-    <header class="header">
+    <header>
 
         <h1>Hori<span class="seo">seo</span>n</h1>
 
@@ -38,7 +38,7 @@
 
     <section class="content">
 
-        <section class="search-engine-optimization">
+        <section id= "search-engine-optimization" class="content-detailed">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimisation Image"/>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -46,7 +46,7 @@
             </p>
         </section>
 
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="content-detailed">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management Image"/>
             <h2>Online Reputation Management</h2>
             <p>
@@ -54,7 +54,7 @@
             </p>
         </section>
 
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="content-detailed">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing Image"/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -94,7 +94,7 @@
     </aside>
 
     <!-- included the semantic element "footer" in order assist with readability of the code -->
-    <footer class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
